Update: 页面布局和样式调整

--- a/_posts/2016-05-20-关于我.md
+++ b/_posts/2016-05-20-关于我.md
@@ -1,11 +1,9 @@
 ---
 layout: post
 title: 关于我
-subtitle: 关于这篇博客
 author: 孟凡泽
 date: 2016-05-20 22:05:40 +0800
-categories: 关于
-tag: 关于
+tag: 日志
 permalink: /about/
 ---
  
@@ -13,7 +11,7 @@ permalink: /about/
 
 本博客将记录我今后的学习历程，主要是Web相关的技术。
 
-### 经历
+## 经历
 
 我出生在一个平凡的小县城，现就读于武汉大学这所美丽的大学。主修GIS，在大学期间做过很多Web开发相关的项目。经过在这里已经近五年的学习和生活，自己渐渐明确了将来在这条职业道路上的发展方向。
 
@@ -21,11 +19,11 @@ permalink: /about/
 
 现在，在这毕业找工作之际，我建立起这篇博客，期待在接下来的日子中，自己能够将琐碎的知识组织起来，并有所输出。我想是大有裨益的。
 
-### 爱好
+## 爱好
 
 我喜欢和计算机，手机，以及其它智能设备打交道。追求硬件、软件和互联网产品上更优质和更高效的使用体验。有时会宅在电脑前玩LOL，自诩不坑。也有时拿起相机出去拍拍片，审美不行的我水平特渣，努力提升ing。
 
-### 阅读
+## 阅读
 
 * 《算法导论》
 * 《深入理解计算机系统》
@@ -36,7 +34,7 @@ permalink: /about/
 * 《高效能人士的七个习惯》
 * 《快乐的Linux命令行》
 
-### 受益于
+## 受益于
 
 * [廖雪峰的官方网站](http://www.liaoxuefeng.com/)
 * [褪墨・时间管理，个人提升，生活健康与习惯](http://www.mifengtd.cn)
@@ -45,7 +43,7 @@ permalink: /about/
 * [阮一峰的网络日志](http://www.ruanyifeng.com/blog/)
 * [w3shool 在线教程](http://w3school.com.cn/)
 
-### 关注
+## 关注
 
 * [IT之家 - 数码，科技，生活](http://ithome.com)
 * [知乎](http://zhihu.com)
@@ -55,4 +53,10 @@ permalink: /about/
 * [慕课网 - 国内最大的IT技能学习平台](http:/imooc.com)
 * [威锋网论坛 - 千万果粉大本营](http://bbs.feng.com)
 * [远景论坛 - 微软极客社区](http://bbs.pcbeta.com)
+
+## 加我好友
+
+![code](/images/posts/code.jpg)
+
+
 
