Update: 让二维码小一些。

--- a/_posts/2016-05-20-关于我.md
+++ b/_posts/2016-05-20-关于我.md
@@ -56,7 +56,8 @@ permalink: /about/
 
 ## 加我好友
 
-![code](/images/posts/code.jpg)
+![qrcode_1463853322210副本](/images/posts/qrcode_1463853322210%E5%89%AF%E6%9C%AC.jpg)
+
 
 
 
