Add: 快速入门ThinkPHP框架——理论篇

--- a/_posts/2016-05-22-【慕课网】数据库设计那些事.md
+++ b/_posts/2016-05-22-【慕课网】数据库设计那些事.md
@@ -1,9 +1,10 @@
 ---
 layout: post
-title: 【慕课网笔记】数据库设计那些事
+title: 【慕课网】数据库设计那些事
 author: 孟凡泽
 date: 2016-05-22 23:05:40 +0800
 tag: 数据库
+categories: 笔记 @慕课网
 ---
 
 注：这是看了慕课网上一个视频的笔记。是比较基础的数据库相关的知识，比如范式，并且还对数据库设计时需要注意的问题和一些经验性的内容做了分享。原视频链接：[http://www.imooc.com/learn/117](http://www.imooc.com/learn/117)
