--- a/_posts/2016-05-24-Mac搭建PHP开发环境.md
+++ b/_posts/2016-05-24-Mac搭建PHP开发环境.md
@@ -3,7 +3,8 @@ layout: post
 title: Mac搭建PHP开发环境
 author: 孟凡泽
 date: 2016-05-24 18:05:40 +0800
-tag: Apache,MySQL,PHP
+tags: [Mac,Apache,MySQL,PHP]
+categories: 笔记
 ---
 
 
