--- a/_posts/2016-05-20-关于我.md
+++ b/_posts/2016-05-20-关于我.md
@@ -3,8 +3,7 @@ layout: post
 title: 关于我
 author: 孟凡泽
 date: 2016-05-20 22:05:40 +0800
-tag: 日志
-categories: 日志
+categories: 随笔
 permalink: /about/
 ---
  
