Add: Laravel v5.2 框架学习笔记

--- a/_posts/2016-05-24-Mac搭建PHP开发环境.md
+++ b/_posts/2016-05-24-Mac搭建PHP开发环境.md
@@ -176,7 +176,7 @@ mysql -u root -p
 
 ## 配置PHP
 
-- PHP的配置文件在`/etc`目录下，从默认配置拷贝一份：
+- PHP的配置文件在`/usr/local/etc/php/7.0`目录下，从默认配置拷贝一份：
 
 ```
 sudo cp /etc/php.ini.default /etc/php.ini
