修改了header和footer的细节

--- a/_posts/2016-05-27-Laravel v5.2 框架学习笔记.md
+++ b/_posts/2016-05-27-Laravel v5.2 框架学习笔记.md
@@ -392,4 +392,27 @@ Route::delete('/task/{task}', function (Task $task) {
 });
 ```
 
+## 问题解决
+
+### 服务器无响应问题
+
+问题描述：访问 http://seckillphp.ifanze-local.cn/quickstart/public 提示服务器无响应。
+问题解决：记得给`storage`就`bootstrap/cache`赋777权限。
+
+### 路由无效
+
+问题描述：访问除主页外的地址，如http://seckillphp.ifanze-local.cn/quickstart/public/task，均显示404错误。
+问题解决：这个问题应该出现在第二次开启服务器之后，因为是apache的rewrite模块没有开启或者配置正确的问题：
+
+1. 在`httpd.conf`中取消下面一行前的注释：
+
+```
+LoadModule rewrite_module modules/mod_rewrite.so
+```
+
+2. 配置`<Directory>`标签，使用：
+
+```
+AllowOverride all
+```
 
