--- a/_posts/2016-05-20-关于我.md
+++ b/_posts/2016-05-20-关于我.md
@@ -54,10 +54,14 @@ permalink: /about/
 * [威锋网论坛 - 千万果粉大本营](http://bbs.feng.com)
 * [远景论坛 - 微软极客社区](http://bbs.pcbeta.com)
 
+<a name="contact">
+
 ## 加我好友
 
 ![qrcode_1463853322210副本](/images/posts/qrcode_1463853322210%E5%89%AF%E6%9C%AC.jpg)
 
-
+<br/>
+<br/>
+<br/>
 
 
